--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="title_activity_main">Lightwave</string>
     <string name="hello_world">Hello world!</string>
     <string name="glass_voice_prompt">What would you like to do?</string>
+    <string name="ok_glass">\"ok glass\"</string>
 
 </resources>
